2012-02-03  Adam Fedor  <fedor@gnu.org>

	* Bump version

2012-02-03  Adam Fedor  <fedor@gnu.org>

	* Version 0.22.0
	* Update release notes

2012-01-23  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoFontInfo.m (-setupAttributes):
	use CAIRO_HINT_METRICS_ON instead of CAIRO_HINT_METRICS_OFF,
	otherwise some text is cut of (e.g. quit Ink with unsaved
	changes, the "t" in "Quit" in the dialog is cut off)

2012-01-23  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoFontInfo.m (-setupAttributes):
	We must not leave the hinting settings as their defaults,
	because if we did, that would mean using the surface defaults
	which might or might not use hinting (xlib does by default.)

	Since we make measurements outside of the context of a surface
	(-advancementForGlyph:), we need to ensure that the same
	hinting settings are used there as when we draw. For now,
	just force hinting to be off.

2012-01-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerWindow.m (-orderwindow:::): Introduce new
	user defaults to respectively make app icons and mini windows
	sticky (aka omnipresent).

2012-01-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32FontEnumerator.m: Add missing include.

2012-01-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32FontEnumerator.m,
	* Source/cairo/CairoFontEnumerator.m,
	* Source/xlib/GSXftFontInfo.m,
	* Source/xlib/XGFont.m: Use NSDebugLLog instead of NSDebugLog to
	reduce amount of default output.

2012-01-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m (-GSShowGlyphsWithAdvances:):
	Update the current point after drawing text. Should not affect
	anything in gui right now, but will be useful later.

2011-12-24  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoContext.m (-beginPrologueBBox:...):
	Add a hack to get landscape printing working. Comment in the source
	reproduced here:
	FIXME: This is confusing... When an 8.5x11 page is set to